# DAIS10_Pyton_Library_Project

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
dais10mini/: __init__.py  analyzer.py  loader.py  pyproject.toml
