[project]
name = "dais10mini"
version = "1.1.3"
description = "DAIS-10 Mini - Lightweight data quality analysis library"
readme = "README.md"
license = "Apache-2.0"

authors = [
    { name="Dr. Usman Zafar", email="usman19zafar@gmail.com" }
]

requires-python = ">=3.8"

keywords = ["data-quality","governance","semantic-analysis","dais10"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
